fixed time shift logic

--- a/src/components/Header/styles/LogQuery.module.css
+++ b/src/components/Header/styles/LogQuery.module.css
@@ -346,14 +346,14 @@
 	cursor: pointer;
 }
 
-.changeIntervalContainer {
+.shiftIntervalContainer {
 	flex-direction: row;
 	margin-top: 0.5rem;
 	justify-content: space-between;
 	align-items: center;
 }
 
-.changeIntervalLabel {
+.shiftIntervalLabel {
 	font-size: 0.9rem;
 	font-weight: 500;
 	text-align: center;
